Добавляет исправления для допуска к защите

--- a/catalog.html
+++ b/catalog.html
@@ -184,12 +184,12 @@
           </div>
           <ul class="hotel-list list-reset">
             <li class="hotel-card">
-              <a class="hotel-card-link" href="#">
+              <a class="hotel-card-link" href="#" tabindex="-1">
                 <img class="hotel-card-image" src="images/catalog/catalog-hotel-1.jpg" width="300" height="212"
                   alt="Звеёздное небо в горах.">
               </a>
               <h3 class="hotel-card-title">
-                <a class="hotel-card-title-link" tabindex="-1" href="#">
+                <a class="hotel-card-title-link" href="#">
                   Amara Resort & Spa
                 </a>
               </h3>
@@ -210,12 +210,12 @@
               </div>
             </li>
             <li class="hotel-card">
-              <a class="hotel-card-link" href="#">
+              <a class="hotel-card-link" href="#" tabindex="-1">
                 <img class="hotel-card-image" src="images/catalog/catalog-hotel-2.jpg" width="300" height="212"
                   alt="Радуга над горами.">
               </a>
               <h3 class="hotel-card-title">
-                <a class="hotel-card-title-link" tabindex="-1" href="#">
+                <a class="hotel-card-title-link" href="#">
                   Villas at Poco Diablo
                 </a>
               </h3>
@@ -236,12 +236,12 @@
               </div>
             </li>
             <li class="hotel-card">
-              <a class="hotel-card-link" href="#">
+              <a class="hotel-card-link" href="#" tabindex="-1">
                 <img class="hotel-card-image" src="images/catalog/catalog-hotel-3.jpg" width="300" height="212"
                   alt="Рассвет в горах.">
               </a>
               <h3 class="hotel-card-title">
-                <a class="hotel-card-title-link" tabindex="-1" href="#">
+                <a class="hotel-card-title-link" href="#">
                   Desert Quail Inn
                 </a>
               </h3>
@@ -262,12 +262,12 @@
               </div>
             </li>
             <li class="hotel-card">
-              <a class="hotel-card-link" href="#">
+              <a class="hotel-card-link" href="#" tabindex="-1">
                 <img class="hotel-card-image" src="images/catalog/catalog-hotel-4.jpg" width="300" height="212"
                   alt="Закат и звёзды в горах.">
               </a>
               <h3 class="hotel-card-title">
-                <a class="hotel-card-title-link" tabindex="-1" href="#">
+                <a class="hotel-card-title-link" href="#">
                   GreenTree Inn
                 </a>
               </h3>
