Добавляет изменения в модальном окне

--- a/modal.html
+++ b/modal.html
@@ -251,8 +251,8 @@
                 <span class="visually-hidden">Информация</span>
               </span>
               <span class="popover modal-popover">
-                <p class="modal-popover-text" role="tooltip" id="tooltip-label-info">Укажите количество детей,
-                  которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</p>
+                <span class="modal-popover-text" role="tooltip" id="tooltip-label-info">Укажите количество детей,
+                  которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
               </span>
             </label>
             <div class="modal-count-container modal-container-childs">
