Добавляет правки к защите

--- a/catalog.html
+++ b/catalog.html
@@ -55,13 +55,12 @@
       <main class="main-catalog" data-test="main">
         <header class="main-catalog-header">
           <h1 class="catalog-header-title">Гостиницы Седоны</h1>
-          <ul class="breadcrumbs-list list-reset">
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span>
-                <img src="images/home.svg" width="13" height="15" alt="Переход на главную страницу."></a>
+          <ul class="breadcrumbs list-reset">
+            <li class="breadcrumb">
+              <a class="breadcrumb-link" href="index.html"><span class="visually-hidden">Главная</span></a>
             </li>
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link current-link" aria-current="page">Гостиницы</a>
+            <li class="breadcrumb">
+              <a class="breadcrumb-link current-link" aria-current="page">Гостиницы</a>
             </li>
           </ul>
           <div class="catalog-products" data-test="filter">
@@ -202,10 +201,7 @@
                 <button class="favorite-hotel button" type="button">В избранное</button>
               </div>
               <div class="rating-wrapper">
-                <p class="stars for-stars">
-                  <img class="hotel-stars four-stars" src="images/stars4.svg" width="140" height="37"
-                    alt="четыре звезды.">
-                </p>
+                <div class="hotel-stars four-stars"></div>
                 <p class="hotel-rating button">Рейтинг: 8,5</p>
               </div>
             </li>
@@ -228,10 +224,7 @@
                 <button class="favorite-hotel button favorite-select" type="button">В избранном</button>
               </div>
               <div class="rating-wrapper">
-                <p class="stars four-stars">
-                  <img class="hotel-stars four-stars" src="images/stars4.svg" width="140" height="37"
-                    alt="четыре звезды.">
-                </p>
+                <div class="hotel-stars four-stars"></div>
                 <p class="hotel-rating button">Рейтинг: 9,2</p>
               </div>
             </li>
@@ -254,10 +247,7 @@
                 <button class="favorite-hotel button" type="button">В избранное</button>
               </div>
               <div class="rating-wrapper">
-                <p class="stars three-stars">
-                  <img class="hotel-stars three-stars" src="images/stars3.svg" width="140" height="37"
-                    alt="три звезды.">
-                </p>
+                <div class="hotel-stars three-stars"></div>
                 <p class="hotel-rating button">Рейтинг: 6,9</p>
               </div>
             </li>
@@ -280,9 +270,7 @@
                 <button class="favorite-hotel button" type="button">В избранное</button>
               </div>
               <div class="rating-wrapper">
-                <p class="stars two-stars">
-                  <img class="hotel-stars two-stars" src="images/stars2.svg" width="140" height="37" alt="две звезды.">
-                </p>
+                <div class="hotel-stars two-stars"></div>
                 <p class="hotel-rating button">Рейтинг: 5,0</p>
               </div>
             </li>
